--- a/client/src/i18n/locales/zh.json
+++ b/client/src/i18n/locales/zh.json
@@ -24,5 +24,23 @@
   "MORE_FAVORITES": "更多",
   "NO_FAVORITES": "尚无收藏夹。",
   "NO_CLIPS_YET": "尚无剪辑，请创建一个！",
-  "CLOSE_EDITOR": "关闭"
+  "CLOSE_EDITOR": "关闭",
+
+  "OTHER_BLOCKS": "其他区块",
+  "DELETE_CONFIRM": "确定要删除吗？",
+  "CONTENT_CHILDREN_COUNT": "子内容：{{count}}个区块",
+  "ACTIONS_LABEL": "操作",
+  "EDIT_BLOCK": "编辑区块",
+  "CREATE_NEW_BLOCK": "创建新区块",
+  "CANCEL": "取消",
+  "UPDATE": "更新",
+  "CREATE": "创建",
+  "BLOCK_TYPE": "区块类型",
+  "COLOR": "颜色",
+  "NAME": "名称",
+  "ROOT_PATH": "根路径",
+  "SELECTED_PATHS_LABEL": "已选择路径（逗号分隔）：",
+  "ACTION_TYPE": "操作类型",
+  "CODE_OPTIONAL": "代码（可选）",
+  "ADD_BLOCK_TOOLTIP": "添加新区块"
 }
