--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -26,7 +26,7 @@
   "NO_CLIPS_YET": "Пока нет клипов. Создайте новый!",
   "CLOSE_EDITOR": "Закрыть",
 
-  "OTHER_BLOCKS": "Другие блоки",
+  "BLOCKS": "Блоки",
   "DELETE_CONFIRM": "Вы уверены?",
   "CONTENT_CHILDREN_COUNT": "Дочерние элементы: {{count}} блок(и/ов)",
   "ACTIONS_LABEL": "Действия",
