--- a/client/src/i18n/locales/ko.json
+++ b/client/src/i18n/locales/ko.json
@@ -1,4 +1,5 @@
 {
+  "CLIP": "클립",
   "MY_CLIPS": "내 클립들",
   "CREATE_CLIP": "새 클립 만들기",
   "CLIPS_MENU": "클립",
@@ -28,7 +29,6 @@
 
   "BLOCKS": "블록",
   "DELETE_CONFIRM": "정말 삭제하시겠습니까?",
-  "ACTIONS_LABEL": "동작",
   "EDIT_BLOCK": "블록 편집",
   "CREATE_NEW_BLOCK": "새 블록 만들기",
   "CANCEL": "취소",
